<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"

    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_20"
        android:paddingRight="@dimen/margin_20"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sunrise_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/wi_sunrise"
                android:textColor="@color/white60"
                android:textSize="@dimen/text_42" />

            <TextView
                android:id="@+id/sunrise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sunrise_icon"
                android:layout_toRightOf="@+id/sunrise_icon"
                android:fontFamily="sans-serif-thin"
                android:paddingStart="@dimen/margin_20"
                android:text="@string/sunrise"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_16"
                android:paddingLeft="@dimen/margin_20" />

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sunrise_icon"
                android:layout_below="@+id/sunrise_name"
                android:layout_toEndOf="@id/sunrise_icon"
                android:layout_toRightOf="@+id/sunrise_icon"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:paddingStart="@dimen/margin_20"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_24"
                android:paddingLeft="@dimen/margin_20" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sunset_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wi_sunset"
                android:textColor="@color/white60"
                android:textSize="@dimen/text_42" />

            <TextView
                android:id="@+id/sunset_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/sunset_icon"
                android:layout_toRightOf="@+id/sunset_icon"
                android:fontFamily="sans-serif-thin"
                android:paddingStart="@dimen/margin_20"
                android:text="@string/sunset"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_16"
                android:paddingLeft="@dimen/margin_20" />

            <TextView
                android:id="@+id/sunset_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sunset_icon"
                android:layout_below="@+id/sunset_name"
                android:layout_toEndOf="@id/sunset_icon"
                android:layout_toRightOf="@+id/sunset_icon"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:paddingStart="@dimen/margin_20"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_24"
                android:paddingLeft="@dimen/margin_20" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/windspeed_icon"
                android:layout_width="@dimen/margin_30"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/wi_strong_wind"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_vertical"
                android:text="@string/windspeed"
                android:textColor="@color/white80" />

            <TextView
                android:id="@id/windspeed_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="end|center_vertical"
                android:text="@string/value"
                android:textColor="@color/white70" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/winddir_icon"
                android:layout_width="@dimen/margin_30"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/wi_direction_up"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_vertical"
                android:text="@string/wind_direction"
                android:textColor="@color/white80" />

            <TextView
                android:id="@id/winddir_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="end|center_vertical"
                android:text="@string/value"
                android:textColor="@color/white70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/humidity_icon"
                android:layout_width="@dimen/margin_30"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/wi_humidity"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_vertical"
                android:text="@string/humidity"
                android:textColor="@color/white80" />

            <TextView
                android:id="@id/humidity_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="end|center_vertical"
                android:text="@string/value"
                android:textColor="@color/white70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/snow_icon"
                android:layout_width="@dimen/margin_30"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/wi_snow"
                android:textColor="@color/white80"
                android:textSize="@dimen/text_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_vertical"
                android:text="@string/snow"
                android:textColor="@color/white80" />

            <TextView
                android:id="@id/snow_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="end|center_vertical"
                android:text="@string/value"
                android:textColor="@color/white70" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>